2009-02-27  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/NotificationAreaService.cs:
	Patch from Valentin Sawadski removing the Skip button from notifications
	when playing from a radio station (BGO #572971).

2009-02-27  Gabriel Burt  <gabriel.burt@gmail.com>

	Patch from John Millikin, with a few enhancements by me, adding support
	for sorting sources in real time and saving/restoring the preference for each
	primary source, in a general way so that sources can add their own sort
	options (BGO #556976)

	* src/Core/Banshee.Services/Makefile.am:
	* src/Core/Banshee.Services/Banshee.Sources/SourceSortType.cs: New class
	for defining sort types, giving them a name, id, and comparer.

	* src/Core/Banshee.Services/Banshee.Sources/Source.cs: Add new properties
	for defining how the children of a source can be sorted (if applicable),
	listening for the Updated event on all child sources and resorting when
	changed (so if sorted by size and a playlist gets a new item, it will be
	resorted immediately).  Save and restore the sort type configuration.

	* src/Core/Banshee.Services/Banshee.Sources/PrimarySource.cs: Override the
	child sort properties, adding name and size asc/desc options.

	* src/Core/Banshee.ThickClient/Banshee.Gui/SourceActions.cs: Dynamically
	generate the Sort by menu from the SortTypes a given source has (if any).
	Allow overriding its label.

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/CellEditEntry.cs: Fix
	firing the EditingDone event twice.

	* src/Core/Banshee.ThickClient/Banshee.Sources.Gui/SourceView.cs: Handle
	resorting a little differently.

	* src/Core/Banshee.ThickClient/Resources/core-ui-actions-layout.xml:
	* src/Extensions/Banshee.InternetRadio/Resources/GlobalUI.xml:
	* src/Extensions/Banshee.Podcasting/Resources/GlobalUI.xml:
	* src/Extensions/Banshee.Lastfm/Resources/GlobalUI.xml: Use the new
	SortChildrenAction in the context menu for these types.
